Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50087

Doc: note that QImage::transformed() may return different format

    XMLWordPrintable

Details

    Description

      The user wants transform the QImage.

      The expected behaviour:

      QImage transformed and keeps its format (if the QImage had a RGB32 format it must have after the transformation done the RGB32 format)

      What actually happens:

      After the transformation the QImage format is changed from RGB32 to ARGB32.

      Steps to reproduce:

      1. Download and unpack the application attached.
      2. Run it as it is and see the application output.
      3. Comment out t.rotate(1); in main.cpp, re-compile application and see the output

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vgt Eirik Aavitsland
            kileppal Kimmo Leppälä
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes