Doc: add explanation of return format of QImage::transformed()

QImage::transformed() can sometimes return an image with a different
image format than the original. This might be unexpected, so explain
it in the doc.

Task-number: QTBUG-50087
Change-Id: I165fc7b44439b770b542be52d3108fd70bf0ae99
Reviewed-by: Venugopal Shivashankar <Venugopal.Shivashankar@qt.io>